--- a/module 2 solutions/solution.html
+++ b/module 2 solutions/solution.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial state=1">
     <title>Assignment Solution for Module 2
 	</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="solutionstyle.css">
 </head>	
 
 
